backend/test15.log
/Users/harimanvitha/hari/Antigravity_project/TravelPlanningExperienceEngine/backend/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/services/ai.service.ts(5,3): error TS2322: Type '{ project: string; location: string; }' is not assignable to type 'boolean | undefined'.

    at createTSError (/Users/harimanvitha/hari/Antigravity_project/TravelPlanningExperienceEngine/backend/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/Users/harimanvitha/hari/Antigravity_project/TravelPlanningExperienceEngine/backend/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/Users/harimanvitha/hari/Antigravity_project/TravelPlanningExperienceEngine/backend/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/Users/harimanvitha/hari/Antigravity_project/TravelPlanningExperienceEngine/backend/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/Users/harimanvitha/hari/Antigravity_project/TravelPlanningExperienceEngine/backend/node_modules/ts-node/src/index.ts:1617:30)
    at node:internal/modules/cjs/loader:1934:10
    at Object.require.extensions.<computed> [as .ts] (/Users/harimanvitha/hari/Antigravity_project/TravelPlanningExperienceEngine/backend/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1524:32)
    at Module._load (node:internal/modules/cjs/loader:1326:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 2322 ]
}
